Hair particle only shows up in final render when visible in viewport #62156

Closed
opened 2019-03-03 18:16:35 +01:00 by Sven Stober · 5 comments

Blender Version
March 03, 02:38:37 - ae977d13f8

System Information
MacOs Mojave
Nvidia GTX780M

Short description of error:
Hair particle only shows up in final render when it's shown in viewport.
"EEVEE"

Exact steps for others to reproduce the error:
Open file > Render image
Hair render eeveee.blend

Blender Version March 03, 02:38:37 - ae977d13f8e9 System Information MacOs Mojave Nvidia GTX780M Short description of error: Hair particle only shows up in final render when it's shown in viewport. "EEVEE" Exact steps for others to reproduce the error: Open file > Render image [Hair render eeveee.blend](https://archive.blender.org/developer/F6754573/Hair_render_eeveee.blend)
Author

Added subscriber: @Stober-3

Added subscriber: @Stober-3
Sven Stober changed title from Hair particle only shows up in final render when it's shown in viewport to Hair particle only shows up in final render when visible in viewport 2019-03-03 18:31:17 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Can confirm that.

The particle system modifier has to be enabled in the viewport and for rendering for the hair to be visible in render.

Can confirm that. The particle system modifier has to be enabled in the viewport **and** for rendering for the hair to be visible in render.

This issue was referenced by 18a9e0776c

This issue was referenced by 18a9e0776c2e9400449a43f28707cc3e62b0c160

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62156
No description provided.