source/blender/draw/engines/basic/basic_engine.c
@@ -139,9 +139,6 @@ static void basic_cache_populate(void *vedata, Object *ob)
 		     psys != NULL;
 		     psys = psys->next)
 		{
-			if (!psys_check_enabled(ob, psys, false)) {
-				continue;
-			}
 			if (!DRW_object_is_visible_psys_in_active_context(ob, psys)) {
 				continue;
 			}
